--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p style="font-size:13px; margin-top:10px; color:#ababab;">Click to copy IP</p>
       </div>
       <div class="col">
-        <img src="\img\puffsenarts-minecraft-square.png"></img>
+        <img src="img\puffsenarts-minecraft-square.png"></img>
       </div>
     </div>
   </div>
