--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container">
-      <div class="navbar-brand" href=""><img style="width:230px; height:auto;" src="\img\arcadia1.png"></img></div>
+      <div class="navbar-brand" href=""><img style="width:230px; height:auto;" src="img\arcadia1.png"></img></div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
