--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container">
-      <div class="navbar-brand" href=""><img style="width:230px; height:auto;" src="img\arcadia1.png"></img></div>
+      <div class="navbar-brand" href=""><img src="img\Arcadia-glow.png"></img></div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,21 +34,27 @@
             <a class="nav-link" href="#">Minecraft</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Staff</a>
+            <a class="nav-link" href="#">Donation</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Donate</a>
+            <a class="nav-link" href="#Staff">Staff</a>
           </li>
         </ul>
       </div>
     </div>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <span class="nav-link-mem" href="#">Members: 89</span>
+      </li>
+    </ul>
   </nav>
 
   <div class="container-fluid">
     <div class="row">
       <div class="col">
         <p style="font-size:50px;font-weight:bold;"> PLAY NOW</p>
-        <p style="padding:20px 40px;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit commodi porro molestiae voluptate.</p>
+        <p style="padding:20px 40px;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit commodi porro
+          molestiae voluptate.</p>
         <button type="button" class="btn btn-success">
           arcadia.minecraft.best
         </button>
