--- a/staff.html
+++ b/staff.html
@@ -29,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Minecraft</a>
+                        <a class="nav-link" href="mc.html">Minecraft</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Donation</a>
+                        <a class="nav-link" href="donation.html">Donation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Staff">Staff</a>
+                        <a class="nav-link" href="staff.html">Staff</a>
                     </li>
                 </ul>
             </div>
@@ -51,49 +51,56 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" id="staff-page-row">
             <div class="col" id="Saf">
-                <img src="img/Nota.png"></img>
-                <a class="btn btn-success">
+                <img src="img/Saf.png"></img>
+                <button class="btn btn-success" disabled>
                     Saf
-                </a>
+                </button>
+                <p>Owner</p>
             </div>
             <div class="col" id="Dally">
                 <img src="img/Nota.png"></img>
-                <a class="btn btn-success">
+                <button class="btn btn-success" disabled>
                     Dally
-                </a>
+                </button>
+                <p>Administrator</p>
             </div>
             <div class="col" id="Yomax">
-                <img src="img/Nota.png"></img>
-                <a class="btn btn-success">
+                <img src="img/Yomaxdog.png"></img>
+                <button class="btn" disabled>
                     Yomaxdog
-                </a>
+                </button>
+                <p>Advisor</p>
             </div>
             <div class="col" id="Ecliptics">
                 <img src="img/Nota.png"></img>
-                <a class="btn btn-success">
+                <button class="btn" disabled>
                     Ecliptics
-                </a>
+                </button>
+                <p>Moderator</p>
             </div>
             <div class="col" id="Moon">
-                <img src="img/Nota.png"></img>
-                <a class="btn btn-success">
+                <img src="img/Moon.png"></img>
+                <button class="btn" disabled>
                     Moon
-                </a>
+                </button>
+                <p>Moderator</p>
             </div>
             <div class="col" id="Notacya">
                 <img src="img/Nota.png"></img>
-                <a class="btn btn-success">
+                <button class="btn" disabled>
                     Notacya
-                </a>
+                </button>
+                <p>Helper</p>
             </div>
-            <div class="col" id="Night">
+            <!-- <div class="col" id="Night">
                 <img src="img/Nota.png"></img>
-                <a class="btn btn-success">
+                <button class="btn" disabled>
                     Night
-                </a>
-            </div>
+                </button>
+                <p>Helper</p>
+            </div> -->
 
         </div>
     </div>
