--- a/donation.html
+++ b/donation.html
@@ -10,7 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="sass/main.css">
-  <link rel="stylesheet" href="js/js.js">
+  <script src='js.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/7eb648faa6.js" crossorigin="anonymous"></script>
 </head>
@@ -42,28 +43,22 @@
         </ul>
       </div>
     </div>
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <span class="nav-link-mem" href="#">Members: 89</span>
-      </li>
-    </ul>
   </nav>
 
   <div class="container-fluid">
     <div class="row">
       <div class="col">
-        <p style="font-size:50px;font-weight:bold;"> PLAY NOW</p>
-        <p style="padding:20px 40px;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit commodi porro
-          molestiae voluptate.</p>
-          <button type="button" class="btn" href="https://discord.gg/gpEZGRMH">
-            Join Discord
-          </button>
-        <button type="button" class="btn" href="">
-          arcadia.minecraft.best
-        </button>
+        <img src="img\saf1.png"></img>
       </div>
       <div class="col">
-        <img src="img\puffsenarts-minecraft-square.png"></img>
+        <form action="https://www.paypal.com/donate" method="post" target="_top">
+          <input type="hidden" name="hosted_button_id" value="5QC8JVNFSBRA8" />
+          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+          <img alt="" border="0" src="https://www.paypal.com/en_PL/i/scr/pixel.gif" width="21" height="1" />
+          </form>
+      </div>
+      <div class="col">
+        <img src="img\xavv.png"></img>
       </div>
     </div>
   </div>
