--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 
+<link rel="icon"
+  href="https://www.freepnglogos.com/uploads/eggplant-png/download-eggplant-emoji-icon-emoji-island-18.png">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,14 +13,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="sass/main.css">
-  <link rel="stylesheet" href="js/js.js">
+  <script src='js.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/7eb648faa6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg bg-light" id="navbar-nav">
     <div class="container">
       <div class="navbar-brand" href=""><img src="img\Arcadia-glow.png"></img></div>
 
@@ -42,25 +46,28 @@
         </ul>
       </div>
     </div>
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <span class="nav-link-mem" href="#">Members: 89</span>
-      </li>
-    </ul>
   </nav>
 
   <div class="container-fluid">
     <div class="row">
       <div class="col">
-        <p style="font-size:50px;font-weight:bold;"> PLAY NOW</p>
-        <p style="padding:20px 40px;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit commodi porro
-          molestiae voluptate.</p>
-          <button type="button" class="btn" href="https://discord.gg/gpEZGRMH">
-            Join Discord
-          </button>
-        <button type="button" class="btn" href="">
-          arcadia.minecraft.best
+        <p style="font-size:60px;font-weight:bold;"> happy bday!!!</p>
+        <p style="padding:20px 40px;color:gray;font-size:15px;">Welcome to ARCADIA, recently opened SMP<br>Based around
+          our three main nations.<br>Join our growing Minecraft & Discord community.</p>
+        <a class="btn" href="https://discord.gg/kP7RW3DMaF">
+          <i class="fa-brands fa-discord" role="button"></i> Join Discord
+        </a>
+
+        <button class="btn" onclick="copyToClipboard('#server-ip')">
+
+          <i class="fa-solid fa-copy"></i>
+          <span id="server-ip">SERVER IP</span>
+
         </button>
+
+        <div class="popup">
+          <span>IP Copied!</span>
+        </div>
       </div>
       <div class="col">
         <img src="img\puffsenarts-minecraft-square.png"></img>
