--- a/mc.html
+++ b/mc.html
@@ -10,7 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="sass/main.css">
-  <link rel="stylesheet" href="js/js.js">
+  <script src='js.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/7eb648faa6.js" crossorigin="anonymous"></script>
 </head>
@@ -42,30 +43,9 @@
         </ul>
       </div>
     </div>
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <span class="nav-link-mem" href="#">Members: 89</span>
-      </li>
-    </ul>
   </nav>
 
   <div class="container-fluid">
-    <div class="row">
-      <div class="col">
-        <p style="font-size:50px;font-weight:bold;"> PLAY NOW</p>
-        <p style="padding:20px 40px;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit commodi porro
-          molestiae voluptate.</p>
-          <button type="button" class="btn" href="https://discord.gg/gpEZGRMH">
-            Join Discord
-          </button>
-        <button type="button" class="btn" href="">
-          arcadia.minecraft.best
-        </button>
-      </div>
-      <div class="col">
-        <img src="img\puffsenarts-minecraft-square.png"></img>
-      </div>
-    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
